# aria_shell

./: CMakeLists.txt  STREAM_DRAINING_COMPLETE.md  TASKS.md  test_parser_debug.cpp
docs/: aria_shell_research_full.txt
docs/research/gemini/responses/remaining/: shell_01_hexstream_io.txt
inc/hexstream/: process.hpp
inc/job/: stream_controller.hpp
src/executor/: executor.cpp
src/hexstream/: process.cpp
src/job/: stream_controller.cpp
src/parser/: parser.cpp
tests/: test_executor.cpp  test_executor_simple.cpp  test_hexstream.cpp  test_lexer.cpp  test_multiline.cpp  test_parser.cpp  test_stream_draining.cpp
